--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ support_data/body_models/smplx/
 
 support_data/body_models/model_compress\.py
 notebooks/dmpl_sample.gif
+notebooks/dmpl_sample.mp4
