--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-git+https://github.com/nghorbani/body_visualizer
-git+https://github.com/MPI-IS/configer.git
-git+https://github.com/MPI-IS/mesh.git
+dotmap==1.3.30
+jupyter
+numpy==1.24.0
+PyYAML==6.0.2
+tqdm==4.67.1
+transforms3d==0.4.2
 
-tqdm==4.47.0
-numpy==1.18.5
-dotmap==1.3.23
-pytorch-lightning==0.9.0
-PyYAML==5.4.1
-torch==1.7.1
-transforms3d==0.3.1
-
-
+-e third_party/body_visualizer
+-e third_party/human_body_prior
